# pico-pio-dma-test

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: experiments.rs  lax_dma.rs  main.rs  time.rs  uart_log.rs
